[package]
name = "dfu-buddy"
version = "0.1.0-alpha4"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
license = "MIT"
edition = "2021"
rust-version = "1.72"
description = "DFU flash utility with GUI"
homepage = "https://github.com/sourcebox/dfu-buddy"
repository = "https://github.com/sourcebox/dfu-buddy"

[dependencies]
anyhow = "1.0.86"
dfufile = "0.2.0"
dirs = "5.0.1"
futures = "0.3.30"
log = { version = "0.4.22", features = [
    "max_level_debug",
    "release_max_level_info",
] }
regex = "1.10.5"
rfd = { version = "0.14.1", default-features = false, features = ["gtk3"] }
rusb = { version = "0.9.4" }
serde = { version = "1.0.203", features = ["derive"] }
simple_logger = { version = "5.0.0" }
egui-modal = "0.3.6"

[dependencies.eframe]
version = "0.27.2"
features = ["persistence"]

[features]
default = ["libusb-vendored"]
libusb-vendored = ["rusb/vendored"]

[profile.release]
lto = true
strip = true

[package.metadata.bundle]
identifier = "de.sourcebox.dfu-buddy"
name = "DFU Buddy"
osx_minimum_system_version = "10.12"
