[package]
name = "dfu-buddy"
version = "0.2.0"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
license = "MIT"
edition = "2024"
rust-version = "1.86"
description = "DFU flash utility with GUI"
homepage = "https://github.com/sourcebox/dfu-buddy"
repository = "https://github.com/sourcebox/dfu-buddy"

[dependencies]
anyhow = "1.0.99"
dfufile = "0.2.0"
dirs = "6.0.0"
futures = "0.3.31"
log = { version = "0.4.28", features = [
    "max_level_debug",
    "release_max_level_info",
] }
regex = "1.11.2"
rfd = { version = "0.15.4", default-features = false, features = ["gtk3"] }
rusb = { version = "0.9.4" }
serde = { version = "1.0.219", features = ["derive"] }
simple_logger = { version = "5.0.0" }

[dependencies.eframe]
version = "0.32.3"
features = ["persistence"]

[features]
default = ["libusb-vendored"]
libusb-vendored = ["rusb/vendored"]

[profile.release]
strip = true

[package.metadata.bundle]
identifier = "de.sourcebox.dfu-buddy"
name = "DFU Buddy"
osx_minimum_system_version = "10.12"
