[package]
name = "dfu-buddy"
version = "0.3.0"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
license = "MIT"
edition = "2024"
rust-version = "1.92"
description = "DFU flash utility with GUI"
homepage = "https://github.com/sourcebox/dfu-buddy"
repository = "https://github.com/sourcebox/dfu-buddy"

[dependencies]
anyhow = "1.0.102"
dfufile = "0.2.0"
dirs = "6.0.0"
futures = "0.3.32"
log = { version = "0.4.29", features = [
    "max_level_debug",
    "release_max_level_info",
] }
regex = "1.12.3"
rfd = "0.17.2"
rusb = { version = "0.9.4" }
serde = { version = "1.0.228", features = ["derive"] }
simple_logger = { version = "5.2.0" }

[dependencies.eframe]
version = "0.34.1"
features = ["persistence"]

[features]
default = ["libusb-vendored"]
libusb-vendored = ["rusb/vendored"]

[profile.release]
strip = true

[package.metadata.bundle]
identifier = "de.sourcebox.dfu-buddy"
name = "DFU Buddy"
osx_minimum_system_version = "10.12"
